src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DQ_Plan_Date__c</fullName>
        <formula>IF(( ((ISBLANK( G2_Approval_Date__c )))&amp;&amp;  ((G2_Planned_Date__c)&lt;Today()) &amp;&amp; ( (ISBLANK( G3_Approval_Date__c )) &amp;&amp; (ISBLANK(   G4_Approval_Date__c )) &amp;&amp; (ISBLANK(  G5_Approval_Date__c )) &amp;&amp;(ISBLANK(   G6_Approval_Date__c )) ) ),TRUE,

IF(( ((ISBLANK(  G3_Approval_Date__c )))&amp;&amp;  ((G3_Planned_Date__c) &lt; Today()) &amp;&amp;( (ISBLANK(   G4_Approval_Date__c )) &amp;&amp;( ISBLANK(  G5_Approval_Date__c )) &amp;&amp; (ISBLANK(   G6_Approval_Date__c )) ) ),TRUE,


IF(( ((ISBLANK(   G4_Approval_Date__c )))&amp;&amp;  (( G4_Planned_Date__c ) &lt;Today()) &amp;&amp; ((ISBLANK(  G5_Approval_Date__c )) &amp;&amp;(ISBLANK(   G6_Approval_Date__c )) ) ),TRUE,

IF(( ((ISBLANK(  G5_Approval_Date__c )))&amp;&amp;  (( G5_Planned_Date__c ) &lt; Today()) &amp;&amp; ((ISBLANK(   G6_Approval_Date__c )) ) ),TRUE, 

IF(( ((ISBLANK(  G6_Approval_Date__c )))&amp;&amp;  (( G6_Planned_Date__c ) &lt; Today()) &amp;&amp; ((ISBLANK(   G6_Approval_Date__c )) ) ),TRUE, FALSE



)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Plan Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_Reasons_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check if main reasons for opportunity has been auto-populated for DS</description>
        <label>DS Reasons Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Plan_Date_PREDICTIVE__c</fullName>
        <description>Req#2652: Data Quality plan date issue for predictive analysis.</description>
        <formula>OR( 
DQ_Plan_Date__c, 
AND(ISBLANK(G2_Approval_Date__c), G2_Planned_Date__c &gt;= DATEVALUE($Label.Current_Period_Start_Date), G2_Planned_Date__c &lt;= DATEVALUE($Label.Current_Period_End_Date)), 
AND(ISBLANK(G3_Approval_Date__c), G3_Planned_Date__c &gt;= DATEVALUE($Label.Current_Period_Start_Date), G3_Planned_Date__c &lt;= DATEVALUE($Label.Current_Period_End_Date)), 
AND(ISBLANK(G4_Approval_Date__c), G4_Planned_Date__c &gt;= DATEVALUE($Label.Current_Period_Start_Date), G4_Planned_Date__c &lt;= DATEVALUE($Label.Current_Period_End_Date)), 
AND(ISBLANK(G5_Approval_Date__c), G5_Planned_Date__c &gt;= DATEVALUE($Label.Current_Period_Start_Date), G5_Planned_Date__c &lt;= DATEVALUE($Label.Current_Period_End_Date)), 
AND(ISBLANK(G6_Approval_Date__c), G6_Planned_Date__c &gt;= DATEVALUE($Label.Current_Period_Start_Date), G6_Planned_Date__c &lt;= DATEVALUE($Label.Current_Period_End_Date)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Plan Date PREDICTIVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_until_Closing__c</fullName>
        <formula>IF( AND(  ISPICKVAL( StageName , &apos;Completed&apos;),OR($RecordType.DeveloperName = &apos;Indirect_Record_Type&apos;,$RecordType.DeveloperName = &apos;Direct_Record_Type&apos;)),
Text(DATEVALUE( Oppty_Completion_Date__c )-DATEVALUE(Now())),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity remains editable 30 days after Completed.</inlineHelpText>
        <label>Days Until Locked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Name__c</fullName>
        <description>Req #1316. Required for Marketo Sync</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deal Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Registration__c</fullName>
        <description>Req #1316. Required for Marketo Sync</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deal Registration #</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <description>Date when Phase Status is changed/saved (Sales Outcome is changed to Won/Lost/Cancelled by x/Obsolete)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Period__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Develop_Oppty_Lead_Time__c</fullName>
        <formula>If(
( ISBLANK( G2_Approval_Date__c)),0,
(
If(

 (ISBLANK(G3_Approval_Date__c)),( (today())-(DATEVALUE(G2_Approval_Date__c))),((DATEVALUE(G3_Approval_Date__c))-(DATEVALUE(G2_Approval_Date__c)))

)
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Develop Oppty Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor account as a part of IR &amp; D lookup enhancement</description>
        <label>Distributor Company</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Partner_Company__c.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Partner_Company__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Collaboration__c</fullName>
        <description>Req: #673
Sprint 3 
URL to new SharePoint collaboration site</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional-Field to add the URL of the Sharepoint location when place needed for large-team collaboration on Oppty/Offer development. Link must point directly to relevant Oppty or Offer (not to a general root site).</inlineHelpText>
        <label>Document Collaboration</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_Collaboration_site_SFDocs__c</fullName>
        <description>Req: #181 
Sprint 3 
URL for Sharepoint location for large-team collaboration on offer development</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Read-only-URL migrated from legacy SFDocs (former Sharepoint site for Oppty/Offer documents repository).</inlineHelpText>
        <label>Document Collaboration site SFDocs</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account_Number__c</fullName>
        <formula>End_Customer__r.AccountNumber</formula>
        <label>End Customer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Activity_Sector__c</fullName>
        <description>8th Feb: As per recent discussion.
Ticket: 2666: Modifying to fetch data from LE</description>
        <formula>IF( TEXT(End_Customer_Information__c) == &quot;Known End Customer&quot;, TEXT(End_Customer_LE__r.Activity_Sector_Name__c), TEXT(Multiple_or_Unknown_EC_Activity_Sector__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Activity Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Country__c</fullName>
        <formula>IF( TEXT(End_Customer_Information__c) == &quot;Known End Customer&quot;,	TEXT(End_Customer_LE__r.Country__c), TEXT(Multiple_or_Unknown_EC_Country__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Information__c</fullName>
        <label>End Customer Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Known End Customer</fullName>
                    <default>true</default>
                    <label>Known End Customer</label>
                </value>
                <value>
                    <fullName>Multiple End Customer</fullName>
                </value>
                <value>
                    <fullName>Currently Unknown End Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Customer_LE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8th Feb: as per our recent discussion, this field will be lookup to account for Indirect Opportunity</description>
        <label>End Customer Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>4 OR (((1 AND 5) OR (2 AND 3 AND 5)) AND 6)</booleanFilter>
            <errorMessage>The End Customer Legal Entity you have chosen is inactive. Please set it to active first or choose a different Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Legal Entity</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <filterItems>
                <field>Account.BusinessPartnerRole__c</field>
                <operation>equals</operation>
                <value>End Customer</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Data Loader Profile</value>
            </filterItems>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (End Customer Legal Entity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer_Legal_Entity_Number__c</fullName>
        <formula>End_Customer_LE__r.AccountNumber</formula>
        <label>End Customer Legal Entity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Market_Segment__c</fullName>
        <description>Ticket: 2666: Modifying to fetch data from LE</description>
        <formula>IF( TEXT(End_Customer_Information__c) == &quot;Known End Customer&quot;, TEXT(End_Customer_LE__r.Market_Segment__c), TEXT(Multiple_or_Unknown_EC_Market_Segment__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>End Customer looks up the accounts for Indirect Opportunity Records.</description>
        <label>End Customer Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (((2 AND 3 AND 4) OR (5 AND 6)) AND 7)</booleanFilter>
            <errorMessage>The End Customer you have chosen is inactive. Please request account activation in CMD or set the prospect to active in singleCRM.</errorMessage>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Data Loader Profile</value>
            </filterItems>
            <filterItems>
                <field>Account.AccountStatusInCRMOM__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Legal Entity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (End Customer)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enterprise_Main_Solution__c</fullName>
        <label>Enterprise Main Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OTH - Cybersecurity</fullName>
                </value>
                <value>
                    <fullName>OTH - IOC</fullName>
                </value>
                <value>
                    <fullName>OTH - IoT</fullName>
                </value>
                <value>
                    <fullName>OTH - SD WAN</fullName>
                </value>
                <value>
                    <fullName>OTH - Service-led</fullName>
                </value>
                <value>
                    <fullName>OTH - Software-led</fullName>
                </value>
                <value>
                    <fullName>PWN - FRMCS</fullName>
                </value>
                <value>
                    <fullName>PWN - GSM-R</fullName>
                </value>
                <value>
                    <fullName>PWN - MPW-P</fullName>
                </value>
                <value>
                    <fullName>PWN - MPW-S</fullName>
                </value>
                <value>
                    <fullName>PWN - NDAC</fullName>
                </value>
                <value>
                    <fullName>PWN - P-WLS-Other</fullName>
                </value>
                <value>
                    <fullName>T&amp;A - GDBI/FTTH/BB</fullName>
                </value>
                <value>
                    <fullName>T&amp;A - Microwave</fullName>
                </value>
                <value>
                    <fullName>T&amp;A - Mission critical IP</fullName>
                </value>
                <value>
                    <fullName>T&amp;A - Optics</fullName>
                </value>
                <value>
                    <fullName>T&amp;A - Passive Optical LAN</fullName>
                </value>
                <value>
                    <fullName>T&amp;A - WiFi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Status_Update__c</fullName>
        <description>Provide the latest status of the opportunity for reporting purpose towards Management</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide the latest status of the opportunity for reporting purpose towards Management</inlineHelpText>
        <label>Executive Status Update</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExemptedOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspending Exempted Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Contract_T_and_Cs__c</fullName>
        <description>Highlight special conditions and deviation from Nokia standards (financing, embargo country, special T&amp;C, technical).</description>
        <inlineHelpText>Highlight special conditions and deviation from Nokia standards (financing, embargo country, special T&amp;C, technical).</inlineHelpText>
        <label>OLD Expected Contract T&amp;Cs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard T&amp;Cs</fullName>
                </value>
                <value>
                    <fullName>Contractual with Customer</fullName>
                </value>
                <value>
                    <fullName>Worse than Existing with Customer</fullName>
                </value>
                <value>
                    <fullName>Non contracted (New) T&amp;Cs</fullName>
                </value>
                <value>
                    <fullName>Red T&amp;C (as per T&amp;C guidance)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_LoA_Approval_Level__c</fullName>
        <description>Expected LoA Approval Level for Offer</description>
        <inlineHelpText>Expected LoA Approval Level for Offer. Currently inactive</inlineHelpText>
        <label>Old Expected LoA Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoA_G4_Approval_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facilitator_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G3 Facilitator Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_Delegate_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G3 Facilitator Delegate 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_Delegate_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G3 Facilitator Delegate 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_Delegate_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G3 Facilitator Delegate 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Comments__c</fullName>
        <description>Enter the Forecast Comment (Req:164)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Forecast Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Freeze_LeadBG_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF Ticket 00007794
Hypercare Fix</description>
        <label>OLD Freeze LeadBG Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Further_Explanation_Of_the_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the for the partner to further explain the type of the request they are requesting</inlineHelpText>
        <label>Further Explanation Of the Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Future_Date__c</fullName>
        <formula>G4_Approval_Date__c+2</formula>
        <label>Future Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G2_Approval_Cycle_Time__c</fullName>
        <formula>If( 
( ISBLANK( G2_Submission_Date__c)), VALUE(&quot;&quot;) , 
( 
If( 

(ISBLANK(G2_Approval_Date__c)), IF( today() &gt;= G2_Submission_Date__c, ((today())-( G2_Submission_Date__c))  ,  VALUE(&quot;&quot;) ), IF( DATEVALUE(G2_Approval_Date__c) &gt;= G2_Submission_Date__c, (DATEVALUE(G2_Approval_Date__c)-( G2_Submission_Date__c))  ,  VALUE(&quot;&quot;) ) 
) 

) 



)</formula>
        <label>G2 Approval Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G2_Approval_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G2 Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G2_Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>G2 Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2_Planned_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G2 Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G2_Submission_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G2 Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G3_Approval_Cycle_Time__c</fullName>
        <formula>If( 
( ISBLANK( G3_Submission_Date__c)), VALUE(&quot;&quot;) , 
( 
If( 

(ISBLANK(G3_Approval_Date__c)), IF( today() &gt;= G3_Submission_Date__c, ((today())-( G3_Submission_Date__c))  ,  VALUE(&quot;&quot;) ), IF( DATEVALUE(G3_Approval_Date__c) &gt;= G3_Submission_Date__c, (DATEVALUE(G3_Approval_Date__c)-( G3_Submission_Date__c))  ,  VALUE(&quot;&quot;) ) 
) 

) 



)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G3 Approval Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G3_Approval_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G3 Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G3_Approval_Level__c</fullName>
        <label>G3 Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoA_G4_Approval_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>G3_Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>G3 Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G3_Planned_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G3 Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G3_Prepared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>G3 Prepared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G3_Recall_Commets__c</fullName>
        <description>Store the G3 Recall Comments  (Req::2216)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G3 Recall Commets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G3_Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to send the Notification as per the G3 Recall (Req::2216)</description>
        <label>G3 Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G3_Submission_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G3 Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G4_Approval_Cycle_Time__c</fullName>
        <formula>If( 
( ISBLANK( G4_Submission_Date__c)), VALUE(&quot;&quot;) , 
( 
If( 

(ISBLANK(G4_Approval_Date__c)), IF( today() &gt;= G4_Submission_Date__c, ((today())-( G4_Submission_Date__c))  ,  VALUE(&quot;&quot;) ), IF( DATEVALUE(G4_Approval_Date__c) &gt;= G4_Submission_Date__c, (DATEVALUE(G4_Approval_Date__c)-( G4_Submission_Date__c))  ,  VALUE(&quot;&quot;) ) 
) 

) 



)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G4 Approval Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4_Approval_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G4 Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4_Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>G4 Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4_Planned_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G4 Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G4_Submission_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G4 Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G5_Approval_Overdue_Days__c</fullName>
        <formula>IF(
ISBLANK(
DATEVALUE(
G5_Contract_Approval_Date__c)) , today() - G5_Planned_Date__c , DATEVALUE( G5_Contract_Approval_Date__c) - G5_Planned_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G5 Approval Overdue Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G5_Contract_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>G5 Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G5_Trigger__c</fullName>
        <label>G5 Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract in line with G4</fullName>
                </value>
                <value>
                    <fullName>Contract with changes vs G4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gate_3_Bypass_no_offer_support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box implies no offer support is required for this opportunity, and it will enforce G4/G5 to be bypassed.</inlineHelpText>
        <label>Gate 3 Bypass (no offer support)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gate_5_Classes__c</fullName>
        <description>Field used to contains Gate5 classes based on the Unweighted Euro Amount.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Gate 5 Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate_6_Bypass_No_Execute_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if EXECUTE Process not applicable – G6 approval not required. Refer to BG Project Categories for criteria (Hyperlink to Document available at Sales Path Guide of Handover Phase).</inlineHelpText>
        <label>Gate 6 Bypass (No Execute needed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gate_Class_Override__c</fullName>
        <label>Gate Class Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_Buddy_Closed__c</fullName>
        <description>This field will be tracked in Grid Buddy app(Req::418)</description>
        <formula>IF( 
OR( 
AND(
ISPICKVAL( StageName ,&apos;Completed&apos;), 
  ISBLANK(Days_until_Closing__c)
),
ISPICKVAL( Sales_Outcome__c,&apos;Cancelled by Customer&apos;), 
ISPICKVAL(Sales_Outcome__c,&apos;Lost to Competitor&apos;), 
ISPICKVAL(Sales_Outcome__c,&apos;Withdrawn by Nokia&apos;), 
ISPICKVAL(Sales_Outcome__c,&apos;Obsolete&apos;),
ISPICKVAL(Apttus_Approval__Approval_Status__c , &apos;Pending Approval&apos;) 

), 
1,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grid Buddy Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hand_Over_Lead_Time__c</fullName>
        <formula>If(
( ISBLANK( G5_Approval_Date__c)),0,
(
If(

 (ISBLANK(G6_Approval_Date__c)),( (today())-(DATEVALUE(G5_Approval_Date__c))),((DATEVALUE(G6_Approval_Date__c))-(DATEVALUE(G5_Approval_Date__c)))

)
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hand Over Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_level_Solution_Installed_base__c</fullName>
        <description>High-level description of E2E solution (products &amp; services) including highlights of strategies to win.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>High-level description of E2E solution (products &amp; services) including highlights of strategies to win.</inlineHelpText>
        <label>High level Solution</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HighestOfferNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field used to capture hugest offer number against current opportunity. 
Added as a part of SF Ticket#00002567</description>
        <label>HighestOfferNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identify_Lead_Time__c</fullName>
        <formula>If(
(ISBLANK(G2_Approval_Date__c)),( Today()-(DATEVALUE(CreatedDate))),(DATEVALUE(G2_Approval_Date__c)-DATEVALUE(CreatedDate))



)</formula>
        <label>Identify Oppty Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IfOpportunityIsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requirement 1507: If Lead BG is MN, ca chatter post should be there</description>
        <label>IfOpportunityIsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Other_please_provide_IR_Name__c</fullName>
        <description>created as a part of PRM requirement ID 2046</description>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, please provide IR Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Reseller_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indirect Reseller Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Indirect Reseller Account)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>